优化CSS、丰富配置项

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="zh-cmn-Hans">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-<div id="popup-box" class="popup-box" style="display: none;">
+<!--<div id="popup-box" class="popup-box" style="display: none;">
     <div class="popup-mask"></div>
     <div class="popup-item popup-confirm">
         <div class="confirm-text">
@@ -33,13 +33,13 @@
     </div>
     <div class="popup-item popup-success">
         <span class="icon"></span>
-        <p class="text">该设备已解除绑定</p>
+        <p class="text">该设备已解除绑定该设备已解除绑定</p>
     </div>
     <div class="popup-item popup-failure">
         <span class="icon"></span>
         <p class="text">该设备解绑失败 请重试</p>
     </div>
-</div>
+</div>-->
 
 <script src="js/popup.js"></script>
 <script src="js/main.js"></script>
